test/errors/scope-resolution/redefinition/redefinition-variables.chpl
var x =
        1;
var x = 2;
var x = 3;
