test/errors/scope-resolution/redefinition/redefinition-variables.1.good
redefinition-variables.chpl:1: warning: '--' is not a pre-decrement
redefinition-variables.chpl:2: syntax error: near '--'
